kubernetes-manifests/hello.deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: dotnet-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-hello-world
  template:
    metadata:
      labels:
        app: dotnet-hello-world
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   fsGroup: 1000
      volumes:
      - name: diagnostics
        emptyDir: {}
      - name: cores
        hostPath:
          path: /var/log/core-dump
      containers:
      - name: server
        image: dotnet-hello-world
        ports:
        - containerPort: 8080
        # env:
        # - name: PORT
        #   value: "8080"
        # - name: COMPlus_DbgEnableMiniDump
        #   value: "1"
        # - name: COMPlus_DbgMiniDumpType
        #   value: "4"
        # - name: COMPlus_DbgMiniDumpName
        #   value: "/cores/prober-core-%d"
        resources:
          requests:
            cpu: 250m
        volumeMounts:
          - mountPath: /tmp
            name: diagnostics
          - mountPath: /cores
            name: cores
      - name: sidecar
        image: dotnet-monitor
        resources:
          limits:
            cpu: 250m
            memory: 100Mi
        volumeMounts:
          - name: diagnostics
            mountPath: /tmp
