kubernetes-manifests/hello.service.yaml
# This Service manifest defines:
# - a load balancer for pods matching label "app: dotnet-hello-world"
# - exposing the application to the public Internet (type:LoadBalancer)
# - routes port 80 of the load balancer to the port 8080 of the Pods.
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: v1
kind: Service
metadata:
  name: dotnet-hello-world-external
spec:
  type: LoadBalancer
  selector:
    app: dotnet-hello-world
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: metrics
    port: 52325
    targetPort: 52325
