kubernetes-manifests/hello.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - k8s.shirhatti.com
    secretName: tls-secret
  rules:
  - host: k8s.shirhatti.com
    http:
      paths:
      - backend:
          serviceName: dotnet-hello-world-external
          servicePort: 80
        path: /(.*)
